--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -13,7 +13,7 @@
 }
 
 body {
-    @apply bg-gray-light font-bold leading-4
+    @apply bg-gray-light font-bold leading-4 text-gray dark:bg-black-dark
 }
 
 
@@ -46,7 +46,7 @@ input {
 }
 
 .btn {
-    @apply font-bold py-4 px-7 rounded-3xl border text-center inline-flex items-center;
+    @apply font-bold py-4 px-7 rounded-3xl border text-center inline-flex items-center dark:text-white
 }
 
 .btn-primary {
@@ -111,7 +111,7 @@ input {
 }
 
 .sidebar {
-    @apply w-[19rem] mr-[19rem] flex fixed top-0 bottom-0 flex-col flex-shrink-0 text-gray bg-white border-r border-r-light
+    @apply w-[19rem] mr-[19rem] flex fixed top-0 bottom-0 flex-col flex-shrink-0 text-gray bg-white border-r border-r-light dark:bg-gray-dark dark:border-dark
 }
 
 
