--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -14,6 +14,9 @@
 	input {
 		@apply body-lg border rounded h-[40px]  pt-[8px] pb-[8px] pl-[16px];
 	}
+	textarea, select {
+		@apply body-lg border rounded h-[40px]  pt-[8px] pb-[8px] pl-[16px];
+	}
 }
 
 body {
